# maui-communicator

./: .gitignore  CMakeLists.txt  Messages.sh  org.kde.communicator.appdata.xml  org.kde.communicator.desktop  org.kde.contacts.desktop  org.maui.communicator.desktop
android_files/: AndroidManifest.xml  gradle.properties
android_files/src/: Union.java
po/ar/: communicator.po
po/ca/: communicator.po
po/ca@valencia/: communicator.po
po/cs/: communicator.po
po/de/: communicator.po
po/en_GB/: communicator.po
po/eo/: communicator.po
po/es/: communicator.po
po/eu/: communicator.po
po/fi/: communicator.po
po/fr/: communicator.po
po/ga/: communicator.po
po/gl/: communicator.po
po/he/: communicator.po
po/it/: communicator.po
po/ja/: communicator.po
po/ka/: communicator.po
po/ko/: communicator.po
po/lt/: communicator.po
po/lv/: communicator.po
po/nl/: communicator.po
po/nn/: communicator.po
po/pl/: communicator.po
po/pt/: communicator.po
po/pt_BR/: communicator.po
po/sa/: communicator.po
po/sk/: communicator.po
po/sl/: communicator.po
po/sv/: communicator.po
po/tr/: communicator.po
po/ug/: communicator.po
po/uk/: communicator.po
po/zh_CN/: communicator.po
po/zh_TW/: communicator.po
src/: CMakeLists.txt  communicator.cpp  communicator.h  main.cpp  main.qml  qml.qrc
src/android_files/: AndroidManifest.xml  build.gradle
src/assets/: communicator_assets.qrc
src/dialer/linux/: call-handler.cpp  call-manager.cpp  dialerutils.cpp  dialerutils.h  main.cpp  plasma_dialer.notifyrc
src/interfaces/: abstractinterface.h  androidinterface.cpp  androidinterface.h  contactimage.cpp  contactimage.h  linuxinterface.cpp  linuxinterface.h
src/models/contacts/: calllogs.cpp  calllogs.h  contactsmodel.cpp  contactsmodel.h
src/views/contacts/: ContactDelegate.qml  ContactDialog.qml  ContactField.qml  ContactPage.qml  ContactsBrowser.qml  ContactsView.qml  EditContactDialog.qml  GridContactDelegate.qml
src/views/dialer/: Dialer.qml  DialerView.qml
src/views/logs/: LogsView.qml
src/widgets/: MessageComposer.qml
